Revise attempt to fix flickering

--- a/css/bootstrap-overrides.css
+++ b/css/bootstrap-overrides.css
@@ -551,14 +551,11 @@ div#filter_table .btn-default {
     box-shadow:0 0 0 1px #ebebeb inset, 0 0 0 2px rgba(255,255,255,0.15) inset, 0 8px 0 0 #adadad, 0 8px 0 1px rgba(0,0,0,0.4), 0 8px 8px 1px rgba(0,0,0,0.5);
 }
 
-svg > g > g:last-child {
-	pointer-events: none;
-}
-
 path[stroke-width="6.5"] {
   stroke: transparent;
 }
 
 /* Attempt to fix flickering */
-svg > g:last-child > g:last-child { pointer-events: none }
-div.google-visualization-tooltip { pointer-events: none }
+div.google-visualization-tooltip {
+    pointer-events: none;
+}
